#114-재매칭 안되는 조건 추가